# shared/api/bundles/order.openapi.v1.bundle.yaml
@@ -73,7 +73,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/get_order_response'
+                $ref: '#/components/schemas/order'
         '404':
           description: The order don't find
           content:
@@ -88,15 +88,15 @@ paths:
       operationId: CancelOrder
       tags:
         - Order
-      requestBody:
-        description: Cancel order
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/delete_order_request'
       responses:
         '204':
           description: Order has been successfully canceled
+          headers:
+            X-Request-ID:
+              schema:
+                type: string
+                format: uuid
+              description: Unique request identifier for tracking
         '404':
           description: The order don't find
           content:
@@ -143,7 +143,7 @@ components:
           example: 8ac8cf24-379e-4a69-89d2-b1ef41fd5711
         total_price:
           type: number
-          format: float
+          format: double
           description: Общая стоимость заказа
           example: 123.45
           minimum: 0
@@ -241,7 +241,7 @@ components:
             - 7ac1cf89-457e-4a67-19d2-b1ef41fd5326
         total_price:
           type: number
-          format: float
+          format: double
           description: Общая стоимость заказа
           example: 123.45
           minimum: 0
@@ -260,23 +260,6 @@ components:
           $ref: '#/components/schemas/order_status'
           description: Статус заказа
           example: PENDING_PAYMENT
-    get_order_response:
-      type: object
-      required:
-        - payment_method
-      properties:
-        payment_method:
-          $ref: '#/components/schemas/order'
-    delete_order_request:
-      type: object
-      required:
-        - order_uuid
-      properties:
-        order_uuid:
-          type: string
-          format: uuid
-          description: UUID отменяемого заказа
-          example: 8ac8cf24-379e-4a69-89d2-b1ef41fd5711
     409_conflict:
       type: object
       required:
